[package]
authors = ["Jason Ngo <jngo102@aim.com>"]
categories = ["embedded", "no-std"]
description = "Library for TinyCircuits Thumby device"
documetation = "https://docs.rs/thumby-rs"
edition = "2021"
exclude = ["build.rs", "deploy.sh", "memory.x", "doc", "*.png"]
keywords = ["thumby", "tiny-circuits", "rp2040", "embedded"]
license = "Apache-2.0"
name = "thumby"
repository = "https://github.com/jngo102/thumby-rs"
version = "0.0.1"

[badges]
circle-ci = { repository = "jngo102/thumby-rs", branch = "main" }

[package.metadata.docs.rs]
targets = ["thumbv6m-none-eabi"]

[dependencies]
cortex-m = "^0"
cortex-m-rt = "^0"
embedded-hal = { version = "^0", features = ["unproven"] }
fugit = "^0"
panic-probe = { version = "^0", features = ["print-rtt"] }

# If you're not going to use a Board Support Package you'll need these:
rp2040-hal = { version = "^0", features = ["rt"] }
rp2040-boot2 = "^0"

ssd1306 = "^0"
panic-halt = "^0"
libm = "^0"

[dev-dependencies]
embedded-graphics = "^0"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3